Agregado el campo visibilidad Corroborada la información de la documentación
